# CPool

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.c
ex000/: CMakeLists.txt
ex001/: CMakeLists.txt
ex002/: CMakeLists.txt  my_print_revalpha.c
ex003/: CMakeLists.txt  my_print_digits.c  my_print_digits.h
ex004/: CMakeLists.txt  my_isneg.h
ex005/: CMakeLists.txt
ex006/: CMakeLists.txt  my_print_comb2.h
ex007/: CMakeLists.txt  my_put_nbr.c  my_put_nbr.h
ex300/: CMakeLists.txt  my_putchar.c  my_putchar.h
ex301/: CMakeLists.txt  my_print_alpha.c  my_print_alpha.h
ex302/: CMakeLists.txt  my_print_revalpha.h
ex303/: CMakeLists.txt
ex304/: CMakeLists.txt  my_isneg.c
ex305/: CMakeLists.txt  my_print_comb.c  my_print_comb.h
ex306/: CMakeLists.txt  my_print_comb2.c
ex307/: CMakeLists.txt  my_put_nbr.c
ex401/: CMakeLists.txt  my_swap.c  my_swap.h
ex402/: CMakeLists.txt  my_putstr.c  my_putstr.h
ex403/: CMakeLists.txt  my_strlen.c  my_strlen.h
ex404/: CMakeLists.txt  my_evil_str.c  my_evil_str.h
ex405/: CMakeLists.txt  my_getnbr.c  my_getnbr.h
ex406/: CMakeLists.txt  my_sort_int_array.c  my_sort_int_array.h
ex501/: CMakeLists.txt  my_compute_factorial_it.c  my_compute_factorial_it.h
ex502/: CMakeLists.txt  my_compute_factorial_rec.c  my_compute_factorial_rec.h
ex503/: CMakeLists.txt  my_compute_power_it.c  my_compute_power_it.h
ex504/: CMakeLists.txt  my_compute_power_rec.c  my_compute_power_rec.h
ex505/: CMakeLists.txt  my_compute_square_root.c  my_compute_square_root.h
ex506/: CMakeLists.txt  my_is_prime.c  my_is_prime.h
ex507/: CMakeLists.txt  my_find_prime_sup.c  my_find_prime_sup.h
